automatically backed up by learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
     <title>title</title>
   </head>
   <body>
-
+    <h1>Buster's Best Bowling Alley</h1>
   </body>
 </html>
 Click in above box to
